@@ -20,7 +20,6 @@ private:
   unsigned int useBytesM;
   int disabledSourcesM[MAX_DISABLED_SOURCES_COUNT];
   int disabledFiltersM[SECTION_FILTER_TABLE_SIZE];
-  char configDirectoryM[PATH_MAX];
 
 public:
   enum eOperatingMode {
@@ -61,7 +60,6 @@ public:
   bool IsTraceMode(eTraceMode modeP) const { return (traceModeM & modeP); }
   unsigned int GetEITScan(void) const { return eitScanM; }
   unsigned int GetUseBytes(void) const { return useBytesM; }
-  const char *GetConfigDirectory(void) const { return configDirectoryM; }
   unsigned int GetDisabledSourcesCount(void) const;
   int GetDisabledSources(unsigned int indexP) const;
   unsigned int GetDisabledFiltersCount(void) const;
@@ -71,7 +69,6 @@ public:
   void SetTraceMode(unsigned int modeP) { traceModeM = (modeP & eTraceModeMask); }
   void SetEITScan(unsigned int onOffP) { eitScanM = onOffP; }
   void SetUseBytes(unsigned int onOffP) { useBytesM = onOffP; }
-  void SetConfigDirectory(const char *directoryP);
   void SetDisabledSources(unsigned int indexP, int sourceP);
   void SetDisabledFilters(unsigned int indexP, int numberP);
 };
